[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/jump_height_reference.png" type="Texture" id=3]
[ext_resource path="res://scenes/Cuerda.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/world.gd" type="Script" id=5]
[ext_resource path="res://assets/fondo.png" type="Texture" id=6]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/godot_char.png" type="Texture" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "icon.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 264.409, 23.9405 )

[node name="proto" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
margin_right = 482.0
margin_bottom = 578.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0, 0, 0, 0.219608 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 8, 0, 0, 131071, 0, 0, 65544, 0, 0, 196607, 0, 0, 131080, 0, 0, 262143, 0, 0, 196616, 0, 0, 327679, 0, 0, 262152, 0, 0, 393215, 0, 0, 327688, 0, 0, 458751, 0, 0, 393224, 0, 0, 524287, 0, 0, 458760, 0, 0, 589823, 0, 0, 524296, 0, 0, 655359, 0, 0, 589832, 0, 0, 720895, 0, 0, 655368, 0, 0, 786431, 0, 0, 720904, 0, 0, 851967, 0, 0, 786440, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 250, 200 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 251.724, 401.98 )
z_index = 1
speed = 400
friction = 0.196
acceleration = 0.205
jump_height = 150.0
jump_time_to_peak = 0.3
jump_time_to_descend = 0.4

[node name="Cuerda" parent="." instance=ExtResource( 4 )]
position = Vector2( 244.106, 368.832 )
collision_layer = 3
collision_mask = 3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="giraCuerda1" type="Sprite" parent="."]
position = Vector2( 15, 337 )
scale = Vector2( 1.45312, 1.4375 )
texture = ExtResource( 8 )
offset = Vector2( 9.29041, 4.17367 )

[node name="giraCuerda2" type="Sprite" parent="."]
position = Vector2( -1346.34, 337 )
scale = Vector2( 1.45312, 1.48438 )
texture = ExtResource( 8 )
offset = Vector2( 1241.35, 2.73065 )
flip_h = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 240, 477 )
collision_layer = 9
collision_mask = 9

[node name="FloorCollision" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="YSort" type="YSort" parent="."]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
